<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feed My Baby!</string>
    <string name="title_section1">Put feeding info</string>
    <string name="title_section2">See Chart</string>
    <string name="title_section3">Baby Info</string>
    <string name="title_section9">Want Donate?</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="btn_add_baby">Add a Baby</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_baby_name">Baby Name</string>
    <string name="hint_baby_name">Baby Name</string>
    <string name="text_birth_date">Birth Date</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_new_baby">Add a New Baby</string>
    <string name="hello_world">Hello world!</string>
    <string name="toast_save_success">Successfully Saved.</string>
    <string name="title_edit_baby">Edit Baby</string>
    <string name="btn_add_feed_info">Add Feed Info</string>
    <string name="title_activity_new_feed">Add Feed Information</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_etc">Etc</string>
    <string name="text_feed_date">FeedDate</string>
    <string name="text_total_quantity">Total Quantity : </string>
    <string name="toast_baby_info_input">Please input your baby info first.</string>
    <string name="text_feed_list_empty">Add Feed Information.</string>
    <string name="text_baby_list_empty">Add baby list.</string>
    <string name="text_donate">Thank you for using this application! It would be very helpful for me if you donate me a sheet of diaper. :)</string>
    <string name="btn_donate">Donate Me(via Paypal)</string>
    <string name="text_average">Average Quantity : </string>
    <string name="title_edit_feed_info">Edit Feed Information</string>
    <string name="text_graph_feeding">Feeding Graph</string>
    <string name="action_export">Export to Excel(csv) File</string>
    <string name="action_send_email">Send Email as Excel(csv) File</string>
</resources>
