<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.yfaney.feedmybaby.NewBabyActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_baby_name"
            android:id="@+id/textBabyName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_baby_name"
            android:ems="10"
            android:id="@+id/editBabyName"
            android:layout_gravity="center_horizontal|top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_birth_date"
            android:id="@+id/textBirthDate"
            android:layout_gravity="left|center_vertical"/>

        <DatePicker
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datePickerBirth"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="72dip"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/btn_cancel"
                android:id="@+id/buttonCancel"
                android:onClick="onCancelClicked"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_add"
                android:id="@+id/buttonAdd"
                android:layout_weight="0.5"
                android:onClick="onAddClicked"/>

    </LinearLayout>
</LinearLayout>
