<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.yfaney.feedmybaby.NewFeedActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_feed_date"
            android:id="@+id/textView"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0/0/0"
            android:id="@+id/textFeedDate"/>
    </LinearLayout>

    <TimePicker
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quantity"
            android:id="@+id/textQuantity"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editQuantity"
            android:text="0"
            android:layout_weight="1"
            android:numeric="decimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="oz"
            android:id="@+id/textUnit"/>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:max="100"
        android:id="@+id/seekBar2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_etc"
        android:id="@+id/textEtc"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/editEtc"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="72dip"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:text="@string/btn_cancel"
            android:id="@+id/buttonFeedCancel"
            android:onClick="onCancelClicked"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_add"
            android:id="@+id/buttonFeedAdd"
            android:layout_weight="0.5"
            android:onClick="onAddClicked"/>

    </LinearLayout>

</LinearLayout>
