<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yfaney.feedmybaby.FeedInfoFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="fill_parent"
                android:id="@+id/spinner"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="fill_parent"
                android:text="Change Date"
                android:id="@+id/buttonChangeDate"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_feed_date"
            android:id="@+id/textFeedDate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#a9110808"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/textFeedDate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_total_quantity"
                android:id="@+id/textMessage1"
                android:layout_below="@+id/textFeedDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0 oz"
                android:id="@+id/textTotalQuantity"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_above="@+id/xmladview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignTop="@android:id/list"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonAddFeedInfo"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_feed_info"
            android:id="@+id/buttonAddFeedInfo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <!-- CPC -->
    <com.fsn.cauly.CaulyAdView
        xmlns:app="http://schemas.android.com/apk/res/com.yfaney.feedmybaby"
        android:id="@+id/xmladview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:appcode="FqvPFYFl" app:effect="RightSlide"
        app:gps="on"
        app:allowcall="false"
        app:dynamicReloadInterval="true"
        app:reloadInterval="20"
        app:bannerHeight="Fixed"/>

</RelativeLayout>
